src/tests/snapshots/tera__tests__rendering__rendering_errors@unknown_var.txt.snap
---
source: src/tests/rendering.rs
expression: "&err"
input_file: src/tests/rendering_inputs/errors/unknown_var.txt
---
 Rendering error --> ["unknown_var.txt":1:9]
  |
1 | Hello {{ hey }}
  |          ^---
  = Tried to render a variable that is not defined
