src/tests/snapshots/tera__tests__rendering__rendering_include_ok.snap
---
source: src/tests/rendering.rs
expression: "&out"
---
<h1>Hello  [Include => (a=world, name=Bob, b=1)] name=Bob</h1>
