src/tests/snapshots/tera__tests__rendering__rendering_inheritance_ok@multiple.txt.snap
---
source: src/tests/rendering.rs
expression: "&out"
input_file: src/tests/rendering_inputs/success/inheritance/multiple.txt
---
PREMAIN
