src/tests/snapshots/tera__tests__rendering__rendering_inheritance_ok@multiple_super.txt.snap
---
source: src/tests/rendering.rs
expression: "&out"
input_file: src/tests/rendering_inputs/success/inheritance/multiple_super.txt
---
dad says hi and grandma says hello sincerely with love
