src/tests/snapshots/tera__tests__rendering__rendering_inheritance_ok@nested_block.txt.snap
---
source: src/tests/rendering.rs
expression: "&out"
input_file: src/tests/rendering_inputs/success/inheritance/nested_block.txt
---
DOCSPAGE
