src/tests/snapshots/tera__tests__rendering__rendering_inheritance_ok@super_without_redefining_parent.txt.snap
---
source: src/tests/rendering.rs
expression: "&out"
input_file: src/tests/rendering_inputs/success/inheritance/super_without_redefining_parent.txt
---
Title - More
