src/tests/snapshots/tera__tests__rendering__rendering_macros_ok@can_use_set_global.txt.snap
---
source: src/tests/rendering.rs
expression: "&out"
input_file: src/tests/rendering_inputs/success/macros/can_use_set_global.txt
---
42 context private to macro
