src/tests/snapshots/tera__tests__rendering__rendering_macros_ok@child_same_namespace.txt.snap
---
source: src/tests/rendering.rs
expression: "&out"
input_file: src/tests/rendering_inputs/success/macros/child_same_namespace.txt
---
Hello/Hi
