src/tests/snapshots/tera__tests__rendering__rendering_macros_ok@default_args.txt.snap
---
source: src/tests/rendering.rs
expression: "&out"
input_file: src/tests/rendering_inputs/success/macros/default_args.txt
---
1
